--- a/Anchor.toml
+++ b/Anchor.toml
@@ -4,14 +4,14 @@
 resolution = true
 skip-lint = false
 
-[programs.localnet]
+[programs.devnet]
 stablecoin_factory = "8i6zoCxrUR8QgiRRHCkFXUJjgN3AAhJrTYXQFnueNGhq"
 
 [registry]
 url = "https://api.apr.dev"
 
 [provider]
-cluster = "Localnet"
+cluster = "Devnet"
 wallet = "~/.config/solana/id.json"
 
 [scripts]
