--- a/programs/stablecoin_factory/Cargo.toml
+++ b/programs/stablecoin_factory/Cargo.toml
@@ -25,7 +25,10 @@ idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
 [dependencies]
 anchor-lang = { version="0.30.1", features = ["init-if-needed", "event-cpi"] }
 anchor-spl = { version = "0.30.1", features = ["metadata"] }
+mpl-token-metadata = "4.0.0"
 stablebond-sdk = "2.0.23"
 solana-security-txt = "1.1.1"
 spl-math = { version = "0.3.0", default-features = false, features = ["no-entrypoint"] }
 bytemuck_derive = "1.7.0"
+switchboard-v2 = "0.1.22"
+static_assertions = "1.1.0"
